--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,25 +2,20 @@ name: Update README
 
 on:
   schedule:
-    # Run this workflow every day at midnight
-    - cron: '0 0 * * *'
-  workflow_dispatch: # Allow manual triggering
+    - cron: '0 */12 * * *'  # Runs every 12 hours
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  update-readme:
+  build:
     runs-on: ubuntu-latest
+    name: Update Profile README
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Update README with stats
-      uses: anmol098/waka-readme-stats@master
-      with:
-        WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        SHOW_LANGUAGE_STATS: "True"
-        SHOW_LINES_OF_CODE: "True"
-        SHOW_OS: "True"
-        SHOW_PROJECTS: "True"
-        SHOW_PROFILE_VIEWS: "True"
-        SHOW_EDITORS: "True"
-        SHOW_TIMEZONE: "True"
-        
+      - uses: actions/checkout@v2
+      
+      - name: Update README with recent activity
+        uses: jamesgeorge007/github-activity-readme@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          MAX_LINES: 5
